--- a/src/html/12_course.html
+++ b/src/html/12_course.html
@@ -351,72 +351,84 @@
                     </div>
                   </div>
                   <div class="course-class-items">
-                    <div class="course-class-item">
-                      <p class="course-class-name"><a href="./15_study_word.html">新词预习</a></p>
-                      <div class="course-class-pro">
-                        <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
-                        </div>
-                        <div class="course-pro-test">
-                          <span>40/</span>56
-                        </div>
-                      </div>
-                    </div>
-                    <div class="course-class-item">
-                      <p class="course-class-name"><a href="./16_study_word_2.html">单词初识</a></p>
-                      <div class="course-class-pro">
-                        <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
-                        </div>
-                        <div class="course-pro-test">
-                          <span>40/</span>56
+                    <a href="./15_study_word.html">
+                      <div class="course-class-item">
+                        <p class="course-class-name">新词预习</p>
+                        <div class="course-class-pro">
+                          <div class="course-pro-warp">
+                            <div class="course-pro-inner"></div>
+                          </div>
+                          <div class="course-pro-test">
+                            <span>40/</span>56
+                          </div>
                         </div>
                       </div>
-                    </div>
-                    <div class="course-class-item">
-                      <p class="course-class-name"><a href="./18_study_word.html">听音写词</a></p>
-                      <div class="course-class-pro">
-                        <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
-                        </div>
-                        <div class="course-pro-test">
-                          <span>40/</span>56
-                        </div>
-                      </div>
-                    </div>
-                    <div class="course-class-item">
-                      <p class="course-class-name"><a href="./17_study_word.html">看字拼词</a></p>
-                      <div class="course-class-pro">
-                        <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
-                        </div>
-                        <div class="course-pro-test">
-                          <span>40/</span>56
+                    </a>
+                    <a href="./16_study_word_2.html">
+                      <div class="course-class-item">
+                        <p class="course-class-name">单词初识</p>
+                        <div class="course-class-pro">
+                          <div class="course-pro-warp">
+                            <div class="course-pro-inner"></div>
+                          </div>
+                          <div class="course-pro-test">
+                            <span>40/</span>56
+                          </div>
                         </div>
                       </div>
-                    </div>
-                    <div class="course-class-item">
-                      <p class="course-class-name"><a href="./19_study_word.html">学后智测</a></p>
-                      <div class="course-class-pro">
-                        <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
-                        </div>
-                        <div class="course-pro-test">
-                          <span>40/</span>56
-                        </div>
-                      </div>
-                    </div>
-                    <div class="course-class-item">
-                      <p class="course-class-name"><a href="./21_oralpractice.html">口语训练之词汇</a></p>
-                      <div class="course-class-pro">
-                        <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
-                        </div>
-                        <div class="course-pro-test">
-                          <span>40/</span>56
+                    </a>
+                    <a href="./18_study_word.html">
+                      <div class="course-class-item">
+                        <p class="course-class-name">听音写词</p>
+                        <div class="course-class-pro">
+                          <div class="course-pro-warp">
+                            <div class="course-pro-inner"></div>
+                          </div>
+                          <div class="course-pro-test">
+                            <span>40/</span>56
+                          </div>
                         </div>
                       </div>
-                    </div>
+                    </a>
+                    <a href="./17_study_word.html">
+                      <div class="course-class-item">
+                        <p class="course-class-name">看字拼词</p>
+                        <div class="course-class-pro">
+                          <div class="course-pro-warp">
+                            <div class="course-pro-inner"></div>
+                          </div>
+                          <div class="course-pro-test">
+                            <span>40/</span>56
+                          </div>
+                        </div>
+                      </div>
+                    </a>
+                    <a href="./19_study_word.html">
+                      <div class="course-class-item">
+                        <p class="course-class-name">学后智测</p>
+                        <div class="course-class-pro">
+                          <div class="course-pro-warp">
+                            <div class="course-pro-inner"></div>
+                          </div>
+                          <div class="course-pro-test">
+                            <span>40/</span>56
+                          </div>
+                        </div>
+                      </div>
+                    </a>
+                    <a href="./21_oralpractice.html">
+                      <div class="course-class-item">
+                        <p class="course-class-name">口语训练之词汇</p>
+                        <div class="course-class-pro">
+                          <div class="course-pro-warp">
+                            <div class="course-pro-inner"></div>
+                          </div>
+                          <div class="course-pro-test">
+                            <span>40/</span>56
+                          </div>
+                        </div>
+                      </div>
+                    </a>
                   </div>
                 </div>
                 <div class="course-body-class">
@@ -427,72 +439,84 @@
                     </div>
                   </div>
                   <div class="course-class-items">
-                    <div class="course-class-item">
-                      <p class="course-class-name"><a href="./22_preview.html">新句预习</a></p>
-                      <div class="course-class-pro">
-                        <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
-                        </div>
-                        <div class="course-pro-test">
-                          <span>40/</span>56
-                        </div>
-                      </div>
-                    </div>
-                    <div class="course-class-item">
-                      <p class="course-class-name"><a href="./23_newsetence_2.html">句子初识</a></p>
-                      <div class="course-class-pro">
-                        <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
-                        </div>
-                        <div class="course-pro-test">
-                          <span>40/</span>56
+                    <a href="./22_preview.html">
+                      <div class="course-class-item">
+                        <p class="course-class-name">新句预习</p>
+                        <div class="course-class-pro">
+                          <div class="course-pro-warp">
+                            <div class="course-pro-inner"></div>
+                          </div>
+                          <div class="course-pro-test">
+                            <span>40/</span>56
+                          </div>
                         </div>
                       </div>
-                    </div>
-                    <div class="course-class-item">
-                      <p class="course-class-name"><a href="./25_read_setence.html">看字拼句</a></p>
-                      <div class="course-class-pro">
-                        <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
-                        </div>
-                        <div class="course-pro-test">
-                          <span>40/</span>56
-                        </div>
-                      </div>
-                    </div>
-                    <div class="course-class-item">
-                      <p class="course-class-name"><a href="./24_setence_combining.html">看字组句</a></p>
-                      <div class="course-class-pro">
-                        <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
-                        </div>
-                        <div class="course-pro-test">
-                          <span>40/</span>56
+                    </a>
+                    <a href="./23_newsetence_2.html">
+                      <div class="course-class-item">
+                        <p class="course-class-name">句子初识</p>
+                        <div class="course-class-pro">
+                          <div class="course-pro-warp">
+                            <div class="course-pro-inner"></div>
+                          </div>
+                          <div class="course-pro-test">
+                            <span>40/</span>56
+                          </div>
                         </div>
                       </div>
-                    </div>
-                    <div class="course-class-item">
-                      <p class="course-class-name"><a href="./19_study_word.html">学后智测</a></p>
-                      <div class="course-class-pro">
-                        <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
-                        </div>
-                        <div class="course-pro-test">
-                          <span>40/</span>56
-                        </div>
-                      </div>
-                    </div>
-                    <div class="course-class-item">
-                      <p class="course-class-name"><a href="./26_oraltraining.html">口语训练之句子</a></p>
-                      <div class="course-class-pro">
-                        <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
-                        </div>
-                        <div class="course-pro-test">
-                          <span>40/</span>56
+                    </a>
+                    <a href="./25_read_setence.html">
+                      <div class="course-class-item">
+                        <p class="course-class-name">看字拼句</p>
+                        <div class="course-class-pro">
+                          <div class="course-pro-warp">
+                            <div class="course-pro-inner"></div>
+                          </div>
+                          <div class="course-pro-test">
+                            <span>40/</span>56
+                          </div>
                         </div>
                       </div>
-                    </div>
+                    </a>
+                    <a href="./24_setence_combining.html">
+                      <div class="course-class-item">
+                        <p class="course-class-name">看字组句</p>
+                        <div class="course-class-pro">
+                          <div class="course-pro-warp">
+                            <div class="course-pro-inner"></div>
+                          </div>
+                          <div class="course-pro-test">
+                            <span>40/</span>56
+                          </div>
+                        </div>
+                      </div>
+                    </a>
+                    <a href="./19_study_word.html">
+                      <div class="course-class-item">
+                        <p class="course-class-name">学后智测</p>
+                        <div class="course-class-pro">
+                          <div class="course-pro-warp">
+                            <div class="course-pro-inner"></div>
+                          </div>
+                          <div class="course-pro-test">
+                            <span>40/</span>56
+                          </div>
+                        </div>
+                      </div>
+                    </a>
+                    <a href="./26_oraltraining.html">
+                      <div class="course-class-item">
+                        <p class="course-class-name">口语训练之句子</p>
+                        <div class="course-class-pro">
+                          <div class="course-pro-warp">
+                            <div class="course-pro-inner"></div>
+                          </div>
+                          <div class="course-pro-test">
+                            <span>40/</span>56
+                          </div>
+                        </div>
+                      </div>
+                    </a>
                   </div>
                 </div>
               </div>
