--- a/src/html/45_words.html
+++ b/src/html/45_words.html
@@ -116,174 +116,191 @@
           <div class="course-body-box">
             <div class="course-body-box-item active">
               <div class="course-body-center words-center">
-                <div class="course-body-class">
-                  <div class="course-class-icon">
-                    <div class="xc-class-box">
-                      <img class="xc-class-img" src="../img/class_01.png" alt="课程" class="xc-class-img">
-                      <p class="xc-class-name">字母初识</p>
+                <a href="#">
+                  <div class="course-body-class">
+                    <div class="course-class-icon">
+                      <div class="xc-class-box">
+                        <img class="xc-class-img" src="../img/class_01.png" alt="课程" class="xc-class-img">
+                        <p class="xc-class-name">字母初识</p>
+                      </div>
                     </div>
-                  </div>
-                  <div class="course-class-items">
-                    <div class="course-class-item">
-                      <div class="course-class-pro">
-                        <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
-                        </div>
-                        <div class="course-pro-test">
-                          <span>40/</span>56
+                    <div class="course-class-items">
+                      <div class="course-class-item">
+                        <div class="course-class-pro">
+                          <div class="course-pro-warp">
+                            <div class="course-pro-inner"></div>
+                          </div>
+                          <div class="course-pro-test">
+                            <span>40/</span>56
+                          </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                </div>
-                <div class="course-body-class">
-                  <div class="course-class-icon">
-                    <div class="xc-class-box">
-                      <img class="xc-class-img" src="../img/class_02.png" alt="课程" class="xc-class-img">
-                      <p class="xc-class-name">找朋友</p>
+                </a>
+                <a href="#">
+                  <div class="course-body-class">
+                    <div class="course-class-icon">
+                      <div class="xc-class-box">
+                        <img class="xc-class-img" src="../img/class_02.png" alt="课程" class="xc-class-img">
+                        <p class="xc-class-name">找朋友</p>
+                      </div>
                     </div>
-                  </div>
-                  <div class="course-class-items">
-                    <div class="course-class-item">
-                      <div class="course-class-pro">
-                        <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
-                        </div>
-                        <div class="course-pro-test">
-                          <span>40/</span>56
+                    <div class="course-class-items">
+                      <div class="course-class-item">
+                        <div class="course-class-pro">
+                          <div class="course-pro-warp">
+                            <div class="course-pro-inner"></div>
+                          </div>
+                          <div class="course-pro-test">
+                            <span>40/</span>56
+                          </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                </div>
-                <div class="course-body-class">
-                  <div class="course-class-icon">
-                    <div class="xc-class-box">
-                      <img class="xc-class-img" src="../img/class_02.png" alt="课程" class="xc-class-img">
-                      <p class="xc-class-name">结对子</p>
+                </a>
+                <a href="#">
+                  <div class="course-body-class">
+                    <div class="course-class-icon">
+                      <div class="xc-class-box">
+                        <img class="xc-class-img" src="../img/class_02.png" alt="课程" class="xc-class-img">
+                        <p class="xc-class-name">结对子</p>
+                      </div>
                     </div>
-                  </div>
-                  <div class="course-class-items">
-                    <div class="course-class-item">
-                      <div class="course-class-pro">
-                        <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
-                        </div>
-                        <div class="course-pro-test">
-                          <span>40/</span>56
+                    <div class="course-class-items">
+                      <div class="course-class-item">
+                        <div class="course-class-pro">
+                          <div class="course-pro-warp">
+                            <div class="course-pro-inner"></div>
+                          </div>
+                          <div class="course-pro-test">
+                            <span>40/</span>56
+                          </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                </div>
-                <div class="course-body-class">
-                  <div class="course-class-icon">
-                    <div class="xc-class-box">
-                      <img class="xc-class-img" src="../img/class_02.png" alt="课程" class="xc-class-img">
-                      <p class="xc-class-name">显身手</p>
+                </a>
+                <a href="#">
+                  <div class="course-body-class">
+                    <div class="course-class-icon">
+                      <div class="xc-class-box">
+                        <img class="xc-class-img" src="../img/class_02.png" alt="课程" class="xc-class-img">
+                        <p class="xc-class-name">显身手</p>
+                      </div>
                     </div>
-                  </div>
-                  <div class="course-class-items">
-                    <div class="course-class-item">
-                      <div class="course-class-pro">
-                        <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
-                        </div>
-                        <div class="course-pro-test">
-                          <span>40/</span>56
+                    <div class="course-class-items">
+                      <div class="course-class-item">
+                        <div class="course-class-pro">
+                          <div class="course-pro-warp">
+                            <div class="course-pro-inner"></div>
+                          </div>
+                          <div class="course-pro-test">
+                            <span>40/</span>56
+                          </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                </div>
+                </a>
               </div>
             </div>
             <div class="course-body-box-item">
               <div class="course-body-center words-center">
-                <div class="course-body-class">
-                  <div class="course-class-icon">
-                    <div class="xc-class-box">
-                      <img class="xc-class-img" src="../img/class_01.png" alt="课程" class="xc-class-img">
-                      <p class="xc-class-name">字母初识</p>
+                <a href="#">
+                  <div class="course-body-class">
+                    <div class="course-class-icon">
+                      <div class="xc-class-box">
+                        <img class="xc-class-img" src="../img/class_01.png" alt="课程" class="xc-class-img">
+                        <p class="xc-class-name">字母初识</p>
+                      </div>
                     </div>
-                  </div>
-                  <div class="course-class-items">
-                    <div class="course-class-item">
-                      <div class="course-class-pro">
-                        <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
-                        </div>
-                        <div class="course-pro-test">
-                          <span>40/</span>56
+                    <div class="course-class-items">
+                      <div class="course-class-item">
+                        <div class="course-class-pro">
+                          <div class="course-pro-warp">
+                            <div class="course-pro-inner"></div>
+                          </div>
+                          <div class="course-pro-test">
+                            <span>40/</span>56
+                          </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                </div>
-                <div class="course-body-class">
-                  <div class="course-class-icon">
-                    <div class="xc-class-box">
-                      <img class="xc-class-img" src="../img/class_02.png" alt="课程" class="xc-class-img">
-                      <p class="xc-class-name">找朋友</p>
+                </a>
+                <a href="#">
+                  <div class="course-body-class">
+                    <div class="course-class-icon">
+                      <div class="xc-class-box">
+                        <img class="xc-class-img" src="../img/class_02.png" alt="课程" class="xc-class-img">
+                        <p class="xc-class-name">找朋友</p>
+                      </div>
                     </div>
-                  </div>
-                  <div class="course-class-items">
-                    <div class="course-class-item">
-                      <div class="course-class-pro">
-                        <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
-                        </div>
-                        <div class="course-pro-test">
-                          <span>40/</span>56
+                    <div class="course-class-items">
+                      <div class="course-class-item">
+                        <div class="course-class-pro">
+                          <div class="course-pro-warp">
+                            <div class="course-pro-inner"></div>
+                          </div>
+                          <div class="course-pro-test">
+                            <span>40/</span>56
+                          </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                </div>
-                <div class="course-body-class">
-                  <div class="course-class-icon">
-                    <div class="xc-class-box">
-                      <img class="xc-class-img" src="../img/class_02.png" alt="课程" class="xc-class-img">
-                      <p class="xc-class-name">结对子</p>
+                </a>
+                <a href="#">
+                  <div class="course-body-class">
+                    <div class="course-class-icon">
+                      <div class="xc-class-box">
+                        <img class="xc-class-img" src="../img/class_02.png" alt="课程" class="xc-class-img">
+                        <p class="xc-class-name">结对子</p>
+                      </div>
                     </div>
-                  </div>
-                  <div class="course-class-items">
-                    <div class="course-class-item">
-                      <div class="course-class-pro">
-                        <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
-                        </div>
-                        <div class="course-pro-test">
-                          <span>40/</span>56
+                    <div class="course-class-items">
+                      <div class="course-class-item">
+                        <div class="course-class-pro">
+                          <div class="course-pro-warp">
+                            <div class="course-pro-inner"></div>
+                          </div>
+                          <div class="course-pro-test">
+                            <span>40/</span>56
+                          </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                </div>
-                <div class="course-body-class">
-                  <div class="course-class-icon">
-                    <div class="xc-class-box">
-                      <img class="xc-class-img" src="../img/class_02.png" alt="课程" class="xc-class-img">
-                      <p class="xc-class-name">显身手</p>
+                </a>
+                <a href="#">
+                  <div class="course-body-class">
+                    <div class="course-class-icon">
+                      <div class="xc-class-box">
+                        <img class="xc-class-img" src="../img/class_02.png" alt="课程" class="xc-class-img">
+                        <p class="xc-class-name">显身手</p>
+                      </div>
                     </div>
-                  </div>
-                  <div class="course-class-items">
-                    <div class="course-class-item">
-                      <div class="course-class-pro">
-                        <div class="course-pro-warp">
-                          <div class="course-pro-inner"></div>
-                        </div>
-                        <div class="course-pro-test">
-                          <span>40/</span>56
+                    <div class="course-class-items">
+                      <div class="course-class-item">
+                        <div class="course-class-pro">
+                          <div class="course-pro-warp">
+                            <div class="course-pro-inner"></div>
+                          </div>
+                          <div class="course-pro-test">
+                            <span>40/</span>56
+                          </div>
                         </div>
                       </div>
                     </div>
                   </div>
-                </div>
+                </a>
               </div>
             </div>
             <div class="course-body-box-item">
               <div class="course-body-center words-center">
+                <!-- 注意：所有course-body-class外面套一层a标签，下面的不加 -->
                 <div class="course-body-class">
                   <div class="course-class-icon">
                     <div class="xc-class-box">
