--- a/src/html/47_sign_01.html
+++ b/src/html/47_sign_01.html
@@ -40,7 +40,7 @@
         <div class="xc-sign">
           <img src="../img/47_bg.png" alt="签到">
           <div class="sign-box">
-            <h2 class="xc-sign-header">每日签到大转盘</h2>
+            <h2 class="xc-sign-header">每日签到</h2>
             <div class="xc-sign-btn">立即签到</div>
           </div>
         </div>
