--- a/src/html/47_sign_02.html
+++ b/src/html/47_sign_02.html
@@ -40,7 +40,7 @@
         <div class="xc-sign">
           <img src="../img/47_bg.png" alt="签到">
           <div class="sign-box">
-            <h2 class="xc-sign-header">每日签到大转盘</h2>
+            <h2 class="xc-sign-header">每日签到</h2>
             <p class="sign-des">恭喜你~获得转盘奖励——100学币！<br>（你将同时获得100学币和100积分）</p>
             <div class="xc-sign-btn">放入包裹</div>
           </div>
