--- a/src/html/12_course_同步课程.html
+++ b/src/html/12_course_同步课程.html
@@ -2494,6 +2494,145 @@
       </div>
     </div>
   </div>
+   <!--course center-->
+   <div class="course_center_wrap">
+      <div class="course_center">
+        <div class="change_course_nav clearfix">
+          <a class="change_course_nav_list active">我的课程</a>
+          <a class="change_course_nav_list">全部课程</a>
+          <span class="close"></span>
+        </div>
+        <div class="change_course_details">
+          <table class="change_course_details_table active">
+            <tr>
+              <th>课程名称</th>
+              <th>上次学习日期</th>
+              <th>继续学习</th>
+            </tr>
+            <tr>
+              <td>课程名称</td>
+              <td>一天前</td>
+              <td>
+                <p class="course_list_details_button">
+                  <span>继续学习</span>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>课程名称</td>
+              <td>一天前</td>
+              <td>
+                <p class="course_list_details_button">
+                  <span>继续学习</span>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>课程名称</td>
+              <td>一天前</td>
+              <td>
+                <p class="course_list_details_button">
+                  <span>继续学习</span>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>课程名称</td>
+              <td>一天前</td>
+              <td>
+                <p class="course_list_details_button">
+                  <span>继续学习</span>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>课程名称</td>
+              <td>一天前</td>
+              <td>
+                <p class="course_list_details_button">
+                  <span>继续学习</span>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>课程名称</td>
+              <td>一天前</td>
+              <td>
+                <p class="course_list_details_button">
+                  <span>继续学习</span>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>课程名称</td>
+              <td>一天前</td>
+              <td>
+                <p class="course_list_details_button">
+                  <span>继续学习</span>
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>课程名称</td>
+              <td>一天前</td>
+              <td>
+                <p class="course_list_details_button">
+                  <span>继续学习</span>
+                </p>
+              </td>
+            </tr>
+          </table>
+          <table class="change_course_details_table">
+            <tr>
+              <th>课程阶段</th>
+              <th>选择版本</th>
+              <th>课程阶段</th>
+            </tr>
+            <tr>
+              <td>小学英语</td>
+              <td>教材版本</td>
+              <td>第一册（一年级上学期）</td>
+            </tr>
+            <tr>
+              <td>初中英语</td>
+              <td>教材版本</td>
+              <td>第一册（一年级上学期）</td>
+            </tr>
+            <tr>
+              <td>高中英语</td>
+              <td>教材版本</td>
+              <td>第一册（一年级上学期）</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>教材版本</td>
+              <td>第一册（一年级上学期）</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>教材版本</td>
+              <td>第一册（一年级上学期）</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>教材版本</td>
+              <td>第一册（一年级上学期）</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>教材版本</td>
+              <td>第一册（一年级上学期）</td>
+            </tr>
+            <tr>
+              <td></td>
+              <td>教材版本</td>
+              <td>第一册（一年级上学期）</td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </div>
+  </div>
   <!-- build:foot -->
   <!-- 底部 -->
   <div class="footer">
@@ -2516,6 +2655,7 @@
 
 
   <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.min.js"></script>
+  <script src="../js/main_momo.js"></script>
   <script src="../js/main_xc.js"></script>
 </body>
 
