--- a/src/html/synchronize.html
+++ b/src/html/synchronize.html
@@ -522,6 +522,80 @@
                       <li><span title="小学教材">小学教材</span>
                         <button type="button" class="btn pull-right btn-primary jq-del-b">删除</button><button type="button"data-toggle="modal" data-target="#xgjiaocai" class="btn pull-right btn-primary jq-change-j">修改</button>
                         <ul class="three">
+                          <li class="active"><span title="小学教材2">小学教材2</span>
+                            <button type="button" class="btn pull-right btn-primary  jq-del-k">删除<button type="button"data-toggle="modal" data-target="#xgkeben" class="btn pull-right btn-primary jq-change-k">修改</button>
+                            <ul class="four">
+                              <li>
+                                  <span title='小学教材5'>小学教材5</span>
+                                <a type="button" href="./synchronize_unit.html" class="btn pull-right btn-primary">详情</a>
+                                <button type="button" class="btn pull-right btn-primary  jq-del-d">删除</button><button type="button"data-toggle="modal" data-target="#xgdanyuan" class="btn pull-right btn-primary jq-change-d">修改</button>
+                              </li>
+                              <li>
+                                  <span title='小学教材6'>小学教材6</span>
+                                <a type="button" href="./synchronize_unit.html" class="btn pull-right btn-primary">详情</a>
+                                <button type="button" class="btn pull-right btn-primary  jq-del-d">删除</button><button type="button"data-toggle="modal" data-target="#xgdanyuan" class="btn pull-right btn-primary jq-change-d">修改</button>
+                              </li>
+                            </ul>
+                          </li>
+                          <li><span title="小学教材2">小学教材2</span>
+                            <button type="button" class="btn pull-right btn-primary  jq-del-k">删除<button type="button"data-toggle="modal" data-target="#xgkeben" class="btn pull-right btn-primary jq-change-k">修改</button>
+                            <ul class="four">
+                              <li>
+                                  <span title='小学教材7'>小学教材7</span>
+
+                                <a type="button" href="./synchronize_unit.html" class="btn pull-right btn-primary">详情</a>
+                                <button type="button" class="btn pull-right btn-primary  jq-del-d">删除</button><button type="button"data-toggle="modal" data-target="#xgdanyuan" class="btn pull-right btn-primary jq-change-d">修改</button>
+                              </li>
+                              <li>
+                                  <span title='小学教材8'>小学教材8</span>
+
+                                <a type="button" href="./synchronize_unit.html" class="btn pull-right btn-primary">详情</a>
+                                <button type="button" class="btn pull-right btn-primary  jq-del-d">删除</button><button type="button"data-toggle="modal" data-target="#xgdanyuan" class="btn pull-right btn-primary jq-change-d">修改</button>
+                              </li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </li>
+                      <li><span title="小学教材">小学教材</span>
+                        <button type="button" class="btn pull-right btn-primary jq-del-b">删除</button><button type="button"data-toggle="modal" data-target="#xgjiaocai" class="btn pull-right btn-primary jq-change-j">修改</button>
+                        <ul class="three">
+                          <li class="active"><span title="小学教材2">小学教材2</span>
+                            <button type="button" class="btn pull-right btn-primary  jq-del-k">删除<button type="button"data-toggle="modal" data-target="#xgkeben" class="btn pull-right btn-primary jq-change-k">修改</button>
+                            <ul class="four">
+                              <li>
+                                  <span title='小学教材5'>小学教材5</span>
+                                <a type="button" href="./synchronize_unit.html" class="btn pull-right btn-primary">详情</a>
+                                <button type="button" class="btn pull-right btn-primary  jq-del-d">删除</button><button type="button"data-toggle="modal" data-target="#xgdanyuan" class="btn pull-right btn-primary jq-change-d">修改</button>
+                              </li>
+                              <li>
+                                  <span title='小学教材6'>小学教材6</span>
+                                <a type="button" href="./synchronize_unit.html" class="btn pull-right btn-primary">详情</a>
+                                <button type="button" class="btn pull-right btn-primary  jq-del-d">删除</button><button type="button"data-toggle="modal" data-target="#xgdanyuan" class="btn pull-right btn-primary jq-change-d">修改</button>
+                              </li>
+                            </ul>
+                          </li>
+                          <li><span title="小学教材2">小学教材2</span>
+                            <button type="button" class="btn pull-right btn-primary  jq-del-k">删除<button type="button"data-toggle="modal" data-target="#xgkeben" class="btn pull-right btn-primary jq-change-k">修改</button>
+                            <ul class="four">
+                              <li>
+                                  <span title='小学教材7'>小学教材7</span>
+
+                                <a type="button" href="./synchronize_unit.html" class="btn pull-right btn-primary">详情</a>
+                                <button type="button" class="btn pull-right btn-primary  jq-del-d">删除</button><button type="button"data-toggle="modal" data-target="#xgdanyuan" class="btn pull-right btn-primary jq-change-d">修改</button>
+                              </li>
+                              <li>
+                                  <span title='小学教材8'>小学教材8</span>
+
+                                <a type="button" href="./synchronize_unit.html" class="btn pull-right btn-primary">详情</a>
+                                <button type="button" class="btn pull-right btn-primary  jq-del-d">删除</button><button type="button"data-toggle="modal" data-target="#xgdanyuan" class="btn pull-right btn-primary jq-change-d">修改</button>
+                              </li>
+                            </ul>
+                          </li>
+                        </ul>
+                      </li>
+                      <li><span title="小学教材">小学教材</span>
+                        <button type="button" class="btn pull-right btn-primary jq-del-b">删除</button><button type="button"data-toggle="modal" data-target="#xgjiaocai" class="btn pull-right btn-primary jq-change-j">修改</button>
+                        <ul class="three">
                           <li class="active"><span title="小学教材3">小学教材3</span>
                             <button type="button" class="btn pull-right btn-primary  jq-del-k">删除<button type="button"data-toggle="modal" data-target="#xgkeben" class="btn pull-right btn-primary jq-change-k">修改</button>
                             <ul class="four">
@@ -600,7 +674,7 @@
                   <li class="one">
                     <span title="初中英语">初中英语</span>
                     <button type="button" class="btn pull-right btn-primary jq-del-j">删除</button><button type="button"data-toggle="modal" data-target="#xgjieduan" class="btn pull-right btn-primary jq-change-j">修改</button>
-                    <ul class="two">
+                    <!-- <ul class="two">
                       <li class="active">
                         <span title="初中教材">初中教材</span>
                         <button type="button" class="btn pull-right btn-primary jq-del-b">删除</button><button type="button"data-toggle="modal" data-target="#xgjiaocai" class="btn pull-right btn-primary jq-change-j">修改</button>
@@ -744,7 +818,7 @@
                           </li>
                         </ul>
                       </li>
-                    </ul>
+                    </ul> -->
                   </li>
                   <li class="one">
                     <span title="高中英语">高中英语</span>
@@ -765,6 +839,18 @@
                               </li>
                               <li>
                                   <span title='小学教材34'>小学教材34</span>
+
+                                <a type="button" href="./synchronize_unit.html" class="btn pull-right btn-primary">详情</a>
+                                <button type="button" class="btn pull-right btn-primary  jq-del-d">删除</button><button type="button"data-toggle="modal" data-target="#xgdanyuan" class="btn pull-right btn-primary jq-change-d">修改</button>
+                              </li>
+                              <li>
+                                <span title='小学教材34'>小学教材34</span>
+
+                                <a type="button" href="./synchronize_unit.html" class="btn pull-right btn-primary">详情</a>
+                                <button type="button" class="btn pull-right btn-primary  jq-del-d">删除</button><button type="button"data-toggle="modal" data-target="#xgdanyuan" class="btn pull-right btn-primary jq-change-d">修改</button>
+                              </li>
+                              <li>
+                                <span title='小学教材34'>小学教材34</span>
 
                                 <a type="button" href="./synchronize_unit.html" class="btn pull-right btn-primary">详情</a>
                                 <button type="button" class="btn pull-right btn-primary  jq-del-d">删除</button><button type="button"data-toggle="modal" data-target="#xgdanyuan" class="btn pull-right btn-primary jq-change-d">修改</button>
